@@ -6,6 +6,8 @@
 v0.8.9 (??.07.2010)
  * All references to extensions lib/div removed.
  * PageBrowser: Respect maximum list limit.
+ * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
+ * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!
 
 v0.8.8 (17.07.2010)
  * Avoid warnings for NumberFormat called with string values
